deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lovely-server
  labels:
    app: lovely-server
spec:
  type: ClusterIP
  selector:
    app: lovely-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
